Display of percentage

--- a/src/app/alert/sources/components/alert-entry/source-entry.html
+++ b/src/app/alert/sources/components/alert-entry/source-entry.html
@@ -20,11 +20,12 @@
                     </td>
                     <td>
                         <h4>
-                            <a class="header" href.bind="entry.productUrl" target="_blank">${entry.lastPrice | nf: { style: 'currency', currency: 'CAD'}}</a>
+                            <a class="header" href.bind="entry.productUrl" target="_blank">
+                                ${entry.lastPrice | nf: { style: 'currency', currency: 'CAD'}}
+                                &nbsp;
+                                <small hide.bind="entry.percentageChange == 0">( ${entry.percentageChange | nf: { style: 'percent' }} )</small>
+                            </a>
                         </h4>
-                        <h6>
-                            ( ${entry.percentageChange | nf { style: 'percent' }} )
-                        </h6>
                     </td>
                     <td class="collapsing">
                         <div class="ui basic circular red icon button" click.delegate="remove()"
@@ -51,11 +52,12 @@
                     </td>
                     <td class="collapsing">
                         <h4>
-                            <a class="header" href.bind="entry.productUrl" target="_blank">${entry.lastPrice | nf: { style: 'currency', currency: 'CAD'}}</a>
+                            <a class="header" href.bind="entry.productUrl" target="_blank">
+                                ${entry.lastPrice | nf: { style: 'currency', currency: 'CAD'}}
+                                &nbsp;
+                                <small hide.bind="entry.percentageChange == 0">( ${entry.percentageChange | nf: { style: 'percent' }} )</small>
+                            </a>
                         </h4>
-                        <h6>
-                            ( ${entry.percentageChange | nf { style: 'percent' }} )
-                        </h6>
                     </td>
                     <td class="right aligned collapsing">
                         <div class="ui basic circular red icon button" click.delegate="remove()"
