--- a/src/app/shared/components/add-source/add-source.html
+++ b/src/app/shared/components/add-source/add-source.html
@@ -1,5 +1,5 @@
 <template>
-    <overlay>
+    <overlay class-name="add-source">
         <form submit.delegate="createSource()" role="form" class="ui large add-source form ${className}">
             <div class="ui one column center aligned grid">
                 <div class="title-column column">
