--- a/src/shared/components/confirmation-modal.html
+++ b/src/shared/components/confirmation-modal.html
@@ -1,5 +1,5 @@
-<template bindable="message" containerless>
-    <div class="ui small basic confirmation modal">
+<template bindable="message,className" containerless>
+    <div class="ui small basic confirmation modal ${className}">
         <div class="ui icon header">
             <i class="archive icon"></i>
             ${message | t: {context: 'title' } & oneTime}
