Update to the list flow

--- a/src/app/alerts/components/create-list-modal/create-list-modal.html
+++ b/src/app/alerts/components/create-list-modal/create-list-modal.html
@@ -29,7 +29,7 @@
 
             <div class="ui centered grid">
                 <div class="ten wide column">
-                    <button class="ui right floated primary-action primary button" type="submit" i18n="lists.create.create">Create</button>
+                    <button class="ui right floated primary-action primary button" type="submit" i18n="lists.create.save">Save</button>
                 </div>
             </div>
         </form>
