--- a/src/app/alerts/components/list-label/list-label.html
+++ b/src/app/alerts/components/list-label/list-label.html
@@ -2,7 +2,7 @@
     <div class="item">
         <a class="ui ${className} large label" click.delegate="clickList()">
             ${label}
-            <i if.one-time="delete" class="delete icon" click.delegate="deleteList()"></i>
+            <i if.one-time="delete" class="delete icon" click.delegate="confirmDeleteList()"></i>
         </a>
     </div>
 </template>
