--- a/src/app/alerts/components/create-list-modal.html
+++ b/src/app/alerts/components/create-list-modal.html
@@ -1,5 +1,5 @@
 <template>
-    <overlay class-name="create-list">
+    <overlay class-name="${id}">
         <form submit.delegate="createList()" role="form" class="ui large form ${className}">
             <h3 class="ui centered header" i18n="lists.create.title">Create a list with the alerts you want</h3>
             <div class="field">
