--- a/src/app/alerts/index.html
+++ b/src/app/alerts/index.html
@@ -1,7 +1,8 @@
 <template>
-    <require from="./components/list-menu/list-menu"></require>
-    <require from="../shared/components/add-source/add-source"></require>
-    <require from="../shared/components/alert-card/alert-card.html"></require>
+    <require from="./components/list-menu"></require>
+    <require from="./components/create-list-modal"></require>
+    <require from="./components/alerts-list"></require>
+    <require from="../shared/components/add-source-modal"></require>
 
     <div class="primary-dark" style="color: white;">
         <div class="ui container" style="position: relative;">
@@ -15,68 +16,40 @@
 
     <div class="primary-light" style="padding-bottom: 2em;">
         <div class="ui container">
-            <list-menu alerts.one-way="alerts" selected-list.two-way="currentListFilter"></list-menu>
+            <list-menu class="mobile hidden"
+                lists.one-time="lists"
+                selected-list.two-way="currentListFilter"
+                delete.call="deleteList(list)"
+                add.call="showModal(createListModal)">
+            </list-menu>
 
-            <div class="ui one column grid">
-                <div class="column">
-                    <div class="ui icon large primary primary-action mobile only button" style="display: block; margin: 0;" click.delegate="showModal('add-source')" show.bind="alerts.length"
-                        i18n="[append]alerts.createAlert"
-                        data-analytics-category="Alerts"
-                        data-analytics-action="add"
-                        data-analytics-label="button">
-                        <i class="plus icon"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="ui one column grid">
-                <div class="column">
-                    <div class="ui link cards">
-                        <a class="ui mobile hidden add-alert card" click.delegate="showModal('add-source')" show.bind="alerts.length || currentListFilter"
-                            data-analytics-category="Alerts"
-                            data-analytics-action="add"
-                            data-analytics-label="card">
-                            <div class="ui image" style="height: 100%;">
-                                <img src="/images/plus-icon.png"
-                                    style="width: 160px; height: 160px; top: calc(50% - 80px); left: calc(50% - 80px); position: absolute;">
-                            </div>
-                        </a>
-                        <alert-card repeat.for="alert of alerts | sort:'title'" alert.one-time="alert" style="border-radius: 2px;" containerless>
-                            <div slot="top-action">
-                                <i class="right floated red circular button remove icon" click.delegate="confirmRemoveAlert(alert)"
-                                    data-analytics-category="Alerts"
-                                    data-analytics-action="remove"></i>
-                            </div>
-                            <div slot="bottom-action">
-                                <a class="right floated primary-action-hover" click.delegate="activateAlert(alert)" hide.bind="alert.isActive"
-                                    i18n="[append]alert.activate"
-                                    data-analytics-category="Alerts"
-                                    data-analytics-action="activate">
-                                    <i class="toggle on icon"></i>
-                                </a>
-                            </div>
-                        </alert-card>
-                    </div>
-                </div>
-            </div>
-            <div class="ui one column grid">
-                <div class="column">
-                    <div class="ui icon large primary primary-action mobile only button" style="display: block; margin: 0;" click.delegate="showModal('add-source')" show.bind="alerts.length"
-                        i18n="[append]alerts.createAlert"
-                        data-analytics-category="Alerts"
-                        data-analytics-action="add"
-                        data-analytics-label="button">
-                        <i class="plus icon"></i>
-                    </div>
-                </div>
-            </div>
+            <!-- <div show.bind="currentListFilter">
+                <a class="ui primary-action button" click.delegate="showModal('update-list')" i18n="[append]lists.createButton">
+                    <i class="plus icon"></i>
+                </a>
+
+                <create-list-modal class="update-list-modal"
+                    alerts.one-way="allAlerts"
+                    selectedAlerts.one-way="currentList.alerts"
+                    name.one-way="currentList.name"
+                    close.call="removeModal('update-list')"
+                    save.call="updateList(name, alerts)">
+                </create-list-modal>
+            </div> -->
+
+            <alerts-list
+                show.bind="allAlerts.length"
+                alerts.one-way="alerts"
+                add.call="showModal(addSourceModal)">
+            </alerts-list>
         </div>
 
-        <div class="ui overlay" hide.bind="alerts.length || currentListFilter">
+        <div class="ui overlay" hide.bind="allAlerts.length">
             <div style="width: 100%; position: absolute; top: 50%; left: 0;">
                 <p style="text-align: center;" i18n="alerts.noAlert">You are not watching any products right now.</p>
                 <p style="text-align: center;" i18n="alerts.getStarted">Get started!</p>
                 <div style="text-align: center;">
-                    <div class="ui primary primary-action button" click.delegate="showModal('add-source')"
+                    <div class="ui primary primary-action button" click.delegate="showModal(addSourceModal)"
                         i18n="[append]alerts.createAlert"
                         data-analytics-category="Alerts"
                         data-analytics-action="add"
@@ -87,12 +60,11 @@
             </div>
         </div>
 
-        <div class="ui ${isUpdatingAlert ? 'active': ''} inverted dimmer">
+        <div class="ui ${isUpdating ? 'active': ''} inverted dimmer">
             <div class="ui text loader" i18n="alerts.updating">Updating</div>
         </div>
 
-        <confirmation-modal message="alerts.deleteConfirmation" class-name="delete-alert"></confirmation-modal>
-
-        <add-source class="add-source-modal" class-name="${isCreatingAlert ? 'loading' : ''}" close.call="removeModal('add-source')" add.call="create(newAlertUrl)"></add-source>
+        <create-list-modal view-model.ref="createListModal" class-name="${isUpdating ? 'loading' : ''}" alerts.one-way="allAlerts" save.call="createList(name, alerts)"></create-list-modal>
+        <add-source-modal view-model.ref="addSourceModal" class-name="${isUpdating ? 'loading' : ''}" add.call="create(newAlertUrl)"></add-source-modal>
     </div>
 </template>
