--- a/src/app/shared/components/add-source-modal.html
+++ b/src/app/shared/components/add-source-modal.html
@@ -1,5 +1,5 @@
 <template>
-    <overlay class-name="add-source">
+    <overlay class-name="add-source ${id}">
         <form submit.delegate="createSource()" role="form" class="ui large add-source form ${className}">
             <div class="ui one column center aligned grid">
                 <div class="title-column column">
