Added analytics on lists

--- a/src/app/alerts/components/create-list-modal.html
+++ b/src/app/alerts/components/create-list-modal.html
@@ -29,7 +29,9 @@
 
             <div class="ui centered grid">
                 <div class="ten wide column">
-                    <button class="ui right floated primary-action primary button" type="submit" i18n="lists.create.save">Save</button>
+                    <button class="ui right floated primary-action primary button" type="submit" i18n="lists.create.save"
+                        data-analytics-category="List"
+                        data-analytics-action="create">Save</button>
                 </div>
             </div>
         </form>
