Adjustment on google analytics

--- a/src/app/alerts/components/list-label.html
+++ b/src/app/alerts/components/list-label.html
@@ -4,7 +4,7 @@
             data-analytics-category="List"
             data-analytics-action="filter">
             ${label}
-            <i if.one-time="delete" class="delete icon" click.delegate="delete({ list: list })"
+            <i if.one-time="delete" class="delete icon button" click.delegate="delete({ list: list })"
                 data-analytics-category="List"
                 data-analytics-action="delete"></i>
         </a>
