--- a/src/app/alerts/components/alerts-list.html
+++ b/src/app/alerts/components/alerts-list.html
@@ -52,5 +52,5 @@
         </div>
     </div>
 
-    <confirmation-modal message="alerts.deleteConfirmation" class-name="delete-alert"></confirmation-modal>
+    <confirmation-modal view-model.ref="confirmationModal" message="alerts.deleteConfirmation"></confirmation-modal>
 </template>
