--- a/src/app/alert/sources/components/source-entry.html
+++ b/src/app/alert/sources/components/source-entry.html
@@ -14,11 +14,11 @@
                         </div>
                     </td>
                     <td>
-                        <div class="ui transparent input">
+                        <div class="ui transparent input" style="width: 100%;">
                             <input value.bind="note & updateTrigger:'blur'" type="text" name="information[note]" i18n="[placeholder]alert.sources.note" placeholder="Note">
                         </div>
                     </td>
-                    <td>
+                    <td class="collapsing">
                         <h4>
                             <a class="header" href.bind="entry.productUrl" target="_blank">
                                 ${entry.lastPrice | nf: { style: 'currency', currency: 'CAD'}}
@@ -39,9 +39,10 @@
                 </tr>
             </tbody>
         </table>
+
         <table class="ui very basic unstackable compact mobile only table">
             <tbody>
-                <tr style="border-bottom: none;">
+                <tr>
                     <td class="collapsing">
                         <div class="ui image header">
                             <a class="image" style="width: initial;" href.bind="entry.productUrl" target="_blank"
@@ -57,7 +58,7 @@
                             <a class="header" href.bind="entry.productUrl" target="_blank">
                                 ${entry.lastPrice | nf: { style: 'currency', currency: 'CAD'}}
                                 &nbsp;
-                                <small hide.bind="entry.percentageChange == 0">
+                                <small show.bind="entry.percentageChange">
                                     ( ${entry.percentageChange > 0 ? '+' : '-'}&nbsp;${entry.absolutePercentageChange | nf: { style: 'percent' }} )
                                 </small>
                             </a>
@@ -71,9 +72,9 @@
                         </div>
                     </td>
                 </tr>
-                <tr style="border-bottom: none;">
-                    <td style="border-top: none;">
-                        <div class="ui transparent input">
+                <tr>
+                    <td colspan="3">
+                        <div class="ui transparent input" style="width: 100%;">
                             <input value.bind="note & updateTrigger:'blur'" type="text" name="information[note]" i18n="[placeholder]alert.sources.note" placeholder="Note">
                         </div>
                     </td>
